<resources>
    <string name="app_name">Msys Emp Portal</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_employee_id">Employee ID</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_middle_name">Middle Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_father_name">Father Name</string>
    <string name="prompt_date_of_birth">Date of Birth</string>
    <string name="prompt_blood_group">Blood Group</string>
    <string name="prompt_qualification">Qualification</string>
    <string name="prompt_date_of_joining">Date of Joining</string>
    <string name="prompt_department">Department</string>
    <string name="prompt_msys_email">Msys Email</string>
    <string name="prompt_tel_no">Tel No</string>
    <string name="prompt_pan_number">Pan Number</string>
    <string name="prompt_emergency_contact_name">Emergency Contact Name</string>
    <string name="prompt_primary_contact_name">Primary Contact Name</string>
    <string name="prompt_secondary_contact_name">Secondary Contact Name</string>
    <string name="prompt_uan_number">UAN Number</string>
    <string name="prompt_temporary_address">Temporary Address</string>
    <string name="prompt_temporary_city">Temporary City</string>
    <string name="prompt_permanent_address">Permanent Address</string>
    <string name="prompt_permanent_city">Permanent City</string>
    <string name="prompt_marital_status">Marital Status</string>
    <string name="prompt_mother_name">Mother Name</string>
    <string name="prompt_religion">Religion</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_passing_year">Passing Year</string>
    <string name="prompt_designation">Designation</string>
    <string name="prompt_client_name">Client Name</string>
    <string name="prompt_personal_email">Personal Email</string>
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_passport_no">Passport No</string>
    <string name="prompt_emergency_contact_phone">Emergency Contact Phone</string>
    <string name="prompt_primary_contact_phone">Primary Contact Phone</string>
    <string name="prompt_secondary_contact_phone">Secondary Contact Phone</string>
    <string name="prompt_pf_number">PF Number</string>
    <string name="prompt_temporary_state">Temporary State</string>
    <string name="prompt_permanent_state">Permanent State</string>
    <string name="action_profile_save">Save</string>
    <string name="action_profile_cancel">Cancel</string>
    <string name="prompt_course_type">Course Type</string>
    <string name="prompt_board_name">Board Name</string>
    <string name="prompt_course_name">Course Name</string>
    <string name="prompt_qual_passing_year">Passing Year</string>
    <string name="prompt_grade">Grade</string>
    <string name="prompt_total_mark">Total Mark</string>
    <string name="prompt_earned_mark">Earned Mark</string>
    <string name="prompt_percentage">Percentage</string>
    <string name="prompt_qual_remarks">Remarks</string>
    <string name="prompt_person_name">Name</string>
    <string name="prompt_relationship">Relationship</string>
    <string name="prompt_person_date_of_birth">Date Of Birth</string>
    <string name="prompt_age">Age</string>
    <string name="prompt_employment">Employment</string>
    <string name="prompt_phone_no">Phone No</string>
    <string name="prompt_family_remarks">Remarks</string>
    <string name="promt_company_name">Company Name</string>
    <string name="promt_designation">Designation</string>
    <string name="promt_role">Role</string>
    <string name="promt_team_size">Team Size</string>
    <string name="promt_ctc">CTC</string>
    <string name="promt_joining_date">Joining Date</string>
    <string name="promt_leaving_date">Leaving Date</string>
    <string name="promt_total_experience">Total Experience</string>
    <string name="promt_exp_remarks">Remarks</string>
    <string name="prompt_type">Type</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_visa_start_date">Start Date</string>
    <string name="prompt_expired_date">Expired Date</string>
    <string name="prompt_visa_remarks">Remarks</string>
    <string name="prompt_project">Project</string>
    <string name="prompt_project_name">Project Name</string>
    <string name="prompt_pro_start_date">Start Date</string>
    <string name="prompt_end_date">End Date</string>
    <string name="prompt_reporting_to">Reporting To</string>
    <string name="prompt_pro_remarks">Remarks</string>
    <string name="prompt_bug_title">Title</string>
    <string name="prompt_bug_type_spinner">Bug Type</string>
    <string name="prompt_last_used">Description</string>
    <string name="prompt_skillset">Skillset</string>
    <string name="prompt_experience">Experience</string>
    <string name="prompt_bug_description">Description</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_settings_save">Save</string>
    <string name="action_settings_cancel">Cancel</string>
    <string name="title_activity_main">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_userprofile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_bugreport">Bug Report</string>
    <string name="action_logout">Logout</string>
    <string-array name="menu_titles">
        <item>Dashboard</item>
        <item>Home</item>
        <item>Leave Management</item>
        <item>Infrastructure</item>
        <item>Others</item>
    </string-array>
    <string-array name="Home_sub">
        <item>Profile</item>
        <item>Qualifications</item>
        <item>Family Details</item>
        <item>Experience</item>
        <item>Visa</item>
        <item>Projects</item>
        <item>Team Members</item>
        <item>Skillset</item>
    </string-array>
    <string-array name="Leave_sub">
        <item>Apply leave</item>
        <item>Leave History</item>
        <item>Team Leaves</item>
    </string-array>
    <string-array name="Infrastructure_sub">
        <item>IT Tickets</item>
        <item>HR Tickets</item>
        <item>Finance Tickets</item>
        <item>Interview Details</item>
        <item>Interview History</item>
        <item>Circulars</item>
        <item>Resource</item>
    </string-array>
    <string-array name="Others_sub">
        <item>Events News</item>
        <item>Openings</item>
        <item>Bug Report</item>
    </string-array>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="qualifications">qualifications</string>
    <string name="projects">Projects</string>
    <string name="visa">Visa</string>
    <string name="team">Team</string>
    <string name="skillset">Skillset</string>
    <string-array name="apply_leave">
        <item>Leave types</item>
        <item>Casual Leave</item>
        <item>Marriage Leave</item>
        <item>Maternity Leave</item>
        <item>Paternity Leave</item>
    </string-array>
    <string name="leave_history">Leave History</string>
    <string name="team_leaves">Team Leaves</string>
    <string name="it_tickets">IT Tickets</string>
    <string name="hr_tickets">Hr Tickets</string>
    <string name="interview_details">Interview Details</string>
    <string name="interview_history">Interview History</string>
    <string name="circulars">Circulars</string>
    <string name="events">Events</string>
    <string name="openings">Openings</string>
    <string name="bug_reports">Bug Reports</string>
    <string name="settings">Settings</string>
    <string name="pravinth_raja_k">pravinth_raja_k</string>
    <string name="pravinthraja_msystechnologies_com">pravinthraja_msystechnologies_com</string>
    <string name="upload_docs">Upload Docs</string>
    <string name="birthday">Birthday</string>
    <string name="course">Course</string>
    <string name="submitted">Submitted</string>
    <string name="document_file">Document File</string>
    <string name="select_file">Browse</string>
    <string name="remarks">Remarks</string>
    <string name="save">Save</string>
    <string name="document_type">Document Type</string>
    <string name="browse">Browse</string>
    <string name="Browse">Browse</string>
    <string-array name="document_type_array">
        <item>Select Document type</item>
        <item>RESUME</item>
        <item>SSLC MARKSHEET</item>
        <item>HSC MARKSHEET</item>
        <item>UG MARKSHEET</item>
        <item>UG PROVISIONAL</item>
        <item>OFFER LETTER</item>
        <item>RELEVING LETTERS</item>
        <item>PAYSLIPS</item>
        <item>VOTER ID</item>
        <item>PAN CARD</item>
        <item>DRIVING LICENSE</item>
        <item>FORM 16</item>
    </string-array>
    <string-array name="document_course_array">
        <item>Select Course type</item>
        <item>Regular</item>
        <item>Distance</item>
        <item>No Relevant</item>
    </string-array>
    <string-array name="document_submitted_array">
        <item>Submitted</item>
        <item>Photo copy</item>
        <item>original</item>
    </string-array>
    <string name="qualification">Qualification</string>
    <string name="passing_year">Passing Year</string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="designatiion">Desigination</string>
    <string name="department">Department</string>
    <string name="manager_name">Manager Name</string>
    <string name="client_name">Client name</string>
    <string name="client_name1">Client Name1</string>
    <string name="msysemail">Msys Email</string>
    <string name="personalmail">Personal Mail</string>
    <string name="telno">Tel No</string>
    <string name="mobile_no">Mobile No</string>
    <string name="pan">Pan Number</string>
    <string name="passport_no">Passport No</string>
    <string name="emergency_name">Emergency Name</string>
    <string name="emergency_contact_no">Emergency Contact Phone</string>
    <string name="primary_name">Primary Name</string>
    <string name="primary_contact_no">Primary Contact Phone</string>
    <string name="secondary_name">Secondary Name</string>
    <string name="secondary_contact_number">Secondary Contact Phone</string>
    <string name="uan_number">UAN Number</string>
    <string name="pf_number">PF Number</string>
    <string name="appraisal_month">Appraisal Month</string>
    <string name="temporary_address">Temporary Address</string>
    <string name="temporary_city">Temporary City</string>
    <string name="temporary_state">Temporary State</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="permanent_city">Permanent City</string>
    <string name="permstate">Permanent State</string>
</resources>